--- a/index.html
+++ b/index.html
@@ -38,5 +38,6 @@ crossorigin="anonymous"></script>
           <div class="mine2"></div>
       </div>
   </div>
+  <a href="https://www.producthunt.com/posts/mine-against-mosquitos?utm_source=badge-featured&utm_medium=badge&utm_souce=badge-mine&#0045;against&#0045;mosquitos" target="_blank"><img src="https://api.producthunt.com/widgets/embed-image/v1/featured.svg?post_id=376465&theme=light" alt="Mine&#0032;Against&#0032;Mosquitos - Mines&#0032;crypto&#0032;used&#0032;to&#0032;distribute&#0032;bed&#0032;nets&#0046; | Product Hunt" style="width: 250px; height: 54px;" width="250" height="54" /></a>
       </body>
 </html>
