--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
   })(window,document,'script','dataLayer','GTM-MBZVZ56');</script>
   <!-- End Google Tag Manager -->
         <meta charset="UTF-8">
-        <title>About Malaria</title>
+        <title>Mine against malaria</title>
         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1289491077433459"
      crossorigin="anonymous"></script>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="styles.css" rel="stylesheet">
+        <meta name='description'content="Mines crypto to prevent malaria.">
     </head>
     <body>
       <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1289491077433459"
@@ -49,10 +50,18 @@ crossorigin="anonymous"></script>
         <h1>Mining...</h1>
         <div id="animations">
         <div id="animationsleft">
-          <div class="mine"></div>
-          <div class="mine2"></div>
+          <div class="mine"></div><div class="mine2"></div>
       </div>
-  </div>
-  <a href="https://www.producthunt.com/posts/mine-against-mosquitos?utm_source=badge-featured&utm_medium=badge&utm_souce=badge-mine&#0045;against&#0045;mosquitos" target="_blank"><img src="https://api.producthunt.com/widgets/embed-image/v1/featured.svg?post_id=376465&theme=light" alt="Mine&#0032;Against&#0032;Mosquitos - Mines&#0032;crypto&#0032;used&#0032;to&#0032;distribute&#0032;bed&#0032;nets&#0046; | Product Hunt" style="width: 250px; height: 54px;" width="250" height="54" /></a><p> Note: This site cannot mine crypto with adblock on.</p>
+  </div><a href="https://www.producthunt.com/posts/mine-against-mosquitos?utm_source=badge-featured&utm_medium=badge&utm_souce=badge-mine&#0045;against&#0045;mosquitos" target="_blank"><img src="https://api.producthunt.com/widgets/embed-image/v1/featured.svg?post_id=376465&theme=light" alt="Mine&#0032;Against&#0032;Mosquitos - Mines&#0032;crypto&#0032;used&#0032;to&#0032;distribute&#0032;bed&#0032;nets&#0046; | Product Hunt" style="width: 250px; height: 54px;" width="250" height="54" /></a>
+  <p>Estimated hashes: <span id="hashEstimate">0</span></p>
+  <script>var seconds = 0;
+    var el = document.getElementById('hashEstimate');
+    
+    function incrementSeconds() {
+        seconds += 1;
+        el.innerText = seconds;
+    }
+    
+    var cancel = setInterval(incrementSeconds, 7);</script>
 </body>
 </html>
